--- a/index.html
+++ b/index.html
@@ -10,3 +10,19 @@
     <!-- Your code here -->
   </body>
 </html>
+
+<img
+src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+alt="Roaring Lion"
+title="Be Brave!"
+/>
+<img
+src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+alt="Papa Lion"
+/>
+
+<img
+src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+alt="Lion"
+title="Be a Lion!"
+/>
